--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.121.1",
     "sqlmodel>=0.0.27",
+    "uvicorn>=0.38.0",
 ]
 
 [dependency-groups]
