--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.121.1",
+    "pandas>=2.3.3",
     "sqlmodel>=0.0.27",
     "uvicorn>=0.38.0",
 ]
